# Desk

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  deny.toml  index.html
.cargo/: config.toml
.deploy/desk-server/: Dockerfile  Dockerfile.dockerignore
.github/: SECURITY.md  renovate.json
.github/workflows/: ci.yml  deploy.yml  gh-pages.yml
.public/: index.html
adapters/code-syntax-s-expression/: Cargo.toml
adapters/code-syntax-s-expression/src/: lib.rs
adapters/command-syntax-basic/: Cargo.toml
adapters/command-syntax-basic/src/: lib.rs
adapters/runtime-simple-traverse/: Cargo.toml
adapters/runtime-simple-traverse/src/: lib.rs
adapters/runtime-simple-traverse/src/apply_binary_operator/: mod.rs
adapters/runtime-simple-traverse/src/apply_function/: mod.rs
adapters/runtime-simple-traverse/src/apply_unary_operator/: mod.rs
adapters/runtime-simple-traverse/src/handle/: mod.rs
adapters/runtime-simple-traverse/src/let_/: mod.rs
adapters/runtime-simple-traverse/src/node/: mod.rs
adapters/runtime-simple-traverse/src/perform/: mod.rs
adapters/runtime-wasm/: Cargo.toml
adapters/runtime-wasm/src/: lib.rs
adapters/widget-backend-egui/: Cargo.toml
adapters/widget-backend-egui/src/: lib.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/card/: create.rs
app/src/desk/: create.rs
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/server/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
components/architect/: Cargo.toml
components/editor/: Cargo.toml
components/editor/src/: card.rs  command.rs  command_syntax.rs  input.rs  lib.rs
components/editor/src/physics/: mod.rs
components/editor/src/terminal/: mod.rs
components/editor/src/widget/: backend.rs  mod.rs  operation.rs  shape.rs
components/language/: Cargo.toml
components/language/src/: lib.rs
components/node/: Cargo.toml
components/physics/: Cargo.toml
components/physics/src/: lib.rs  shape.rs
components/physics/src/widget/: backend.rs  event.rs  mod.rs  operation.rs
components/physics/src/widget/component/: mod.rs  sugar.rs
components/protocol/: Cargo.toml
components/protocol/src/: box_id.rs  card_id.rs  id.rs  lib.rs  node_id.rs  term_id.rs
components/runtime/: Cargo.toml
components/runtime/src/: card.rs  code_generator.rs  definition.rs  lib.rs  vm.rs
components/security/: Cargo.toml
components/security/src/: lib.rs
components/shell/: Cargo.toml
components/shell/src/: card.rs  desk.rs  lib.rs  terminal.rs
configs/: crates.txt  deny.toml  theme.ron
core/card/: Cargo.toml
core/card/src/: card.rs  lib.rs  source.rs
core/credential/: Cargo.toml
core/desk/: Cargo.toml
core/desk/src/: lib.rs
core/file/: Cargo.toml
core/function/: Cargo.toml
core/room/: Cargo.toml
core/source/: Cargo.toml
core/source/src/: lib.rs  memory_source.rs
core/user/: Cargo.toml
core/value/: Cargo.toml
crates/adapters/client-websocket/: Cargo.toml
crates/adapters/client-websocket/src/: lib.rs  native.rs  next_vec.rs  wasm.rs
crates/adapters/code-syntax-s-expression/: Cargo.toml
crates/adapters/dkernel-firestore/: Cargo.toml
crates/adapters/dkernel-in-memory/: Cargo.toml
crates/adapters/dkernel-in-memory/src/: lib.rs
crates/adapters/dworkspace-firestore/: Cargo.toml
crates/adapters/dworkspace-in-memory/: Cargo.toml
crates/adapters/runtime-simple-traverse/: Cargo.toml
crates/adapters/runtime-simple-traverse/src/: lib.rs
crates/adapters/runtime-wasm/: Cargo.toml
crates/adapters/topic-firestore/: Cargo.toml
crates/adapters/user-authentication-firebase/: Cargo.toml
crates/adapters/widget-backend-egui/: Cargo.toml
crates/adapters/widget-backend-egui/src/: lib.rs
crates/apps/client/: Cargo.toml
crates/apps/client/src/: main.rs
crates/apps/desk-x/: .firebaserc  .gitignore  Cargo.toml  firebase.json
crates/apps/desk-x/functions/: .gitignore  package-lock.json  package.json
crates/apps/desk-x/public/: index.html
crates/apps/desk-x/src/: about.rs  main.rs  panels.rs  playground.rs  theme.rs  windows.rs
crates/apps/deskc/: Cargo.toml
crates/apps/deskc-cli/: Cargo.toml
crates/apps/language-server/: Cargo.toml
crates/apps/server/: Cargo.toml
crates/components/amir/: Cargo.toml
crates/components/architect/: Cargo.toml
crates/components/ast/: Cargo.toml
crates/components/desk-command/: Cargo.toml
crates/components/desk-physics/: Cargo.toml
crates/components/desk-plugin/: Cargo.toml
crates/components/desk-system-ordering/: Cargo.toml
crates/components/desk-terminal/: Cargo.toml
crates/language_server/: Cargo.toml
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs  parser_ext.rs  span.rs
crates/syntax/src/lexer/: mod.rs
crates/syntax/src/parser/: common.rs  expr.rs  mod.rs  type.rs
docs/: CONTRIBUTING.md  CREDITS.md
docs/blog/: 0001-introduce-desk.md  0001-introduce.md  0002-algebraic-effects.md
docs/decisions/: adr-template.md
docs/language/: REATMEvv.md  formal-definition.md  index.md  introduction.md  specification.md
envs/firebase/: .gitignore  firebase.json
plugins/: Cargo.toml
plugins/core/: Cargo.toml
plugins/core/src/: lib.rs
plugins/core/src/card/: mod.rs
plugins/core/src/language/runtime/: mod.rs
plugins/core/src/shell/: mod.rs
plugins/egui/: Cargo.toml
plugins/egui/src/: lib.rs
plugins/physics-heron/: Cargo.toml
plugins/physics-heron/src/: lib.rs
plugins/physics-rapier/src/: lib.rs
plugins/shell/: Cargo.toml
plugins/shell/src/: lib.rs
plugins/src/: lib.rs
plugins/src/card/: mod.rs
plugins/src/desk/: mod.rs
plugins/src/egui/: mod.rs
plugins/src/language/runtime/: mod.rs
plugins/src/physics/: mod.rs
plugins/wasm-target/: Cargo.toml
plugins/wasm-target/src/: lib.rs
server/: Cargo.toml
systems/: Cargo.toml
systems/shell-terminal/src/: lib.rs
systems/src/card/: create.rs  mod.rs
systems/src/desk/: create.rs
tools/: build-and-serve.sh  build-wasm.sh  check-ci.sh  deploy-desk-x-hosting.sh  deploy-wasm.sh  diff-crates.sh  list-crates.sh  publish-crates.sh  publish.sh
(+853 files in other folders)
