[workspace]
resolver = "2"
members = [
  "crates/libs/*",
  "crates/apps/*",
  "crates/plugins/*",
  "crates/systems/*",
  "crates/components/*",
  "crates/adapters/*",
  "crates/tests/*",
]
# wait for rapier2d supports bevy 0.9
exclude = [
  "crates/plugins/desk-rapier2d",
]

# for smaller build size
[profile.release]
lto = "thin"

# for parol
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
