[workspace]
resolver = "2"
members = [
  "crates/libs/*",
  "crates/apps/*",
  "crates/plugins/*",
  "crates/systems/*",
  "crates/components/*",
  "crates/adapters/*",
  "crates/tests/*",
]
# wait for rapier2d supports bevy 0.9
exclude = [
  "crates/plugins/desk-rapier2d",
]

# for smaller build size
[profile.release]
lto = "thin"

# for parol
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
parking_lot = "0.12"
thiserror = "1.0"
uuid = "1.2"

deskc = { path = "crates/systems/deskc", version = "0.0.0" }
deskc-ids = { path = "crates/components/deskc-ids", version = "0.0.0" }
deskc-type = { path = "crates/components/deskc-type", version = "0.0.0" }
deskc-macros = { path = "crates/libs/deskc-macros", version = "0.0.0" }
deskc-ast = { path = "crates/systems/deskc-ast", version = "0.0.0" }
