[workspace]
resolver = "2"
members = [
  "crates/libs/*",
  "crates/apps/*",
  "crates/plugins/*",
  "crates/systems/*",
  "crates/components/*",
  "crates/adapters/*",
  "crates/tests/*",
]
# wait for rapier2d supports bevy 0.9
exclude = [
  "crates/plugins/desk-rapier2d",
]

# for smaller build size
[profile.release]
lto = "thin"

# for parol
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
parking_lot = "0.12"
thiserror = "1.0"
uuid = "1.4"
bevy = "0.11"
egui = "0.22"
bevy_math = "0.11"
bevy_ecs = "0.11"
once_cell = "1.18"
maybe-owned = "0.3.4"
egui_cable = "0.5"
ron = "0.8"

deskc = { path = "crates/systems/deskc", version = "0.0.0" }
deskc-ids = { path = "crates/components/deskc-ids", version = "0.0.0" }
deskc-type = { path = "crates/components/deskc-type", version = "0.0.0" }
deskc-macros = { path = "crates/libs/deskc-macros", version = "0.0.0" }
deskc-ast = { path = "crates/components/deskc-ast", version = "0.0.0" }
desk-plugin = { path = "crates/components/desk-plugin", version = "0.0.0" }
desk-window = { path = "crates/components/desk-window", version = "0.0.0" }
desk-theme = { path = "crates/components/desk-theme", version = "0.0.0" }
dworkspace = { path = "crates/systems/dworkspace", version = "0.0.0" }
dson = { path = "crates/components/dson", version = "0.0.0" }
