[package]
name = "desk-app"
version = "0.1.0"
authors = ["Ryo Hashiguchi <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tarpc = "0.25"

room = { package = "desk-room", path = "../core/room" }
desk = { package = "desk-desk", path = "../core/desk" }
file = { package = "desk-file", path = "../core/file" }
card = { package = "desk-card", path = "../core/card" }
source = { package = "desk-source", path = "../core/source" }
user = { package = "desk-user", path = "../core/user" }
credential = { package = "desk-credential", path = "../core/credential" }