[package]
name = "desk-systems"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editor = { package = "desk-editor", path = "../components/editor" }
node = { package = "desk-node", path = "../components/node" }
security = { package = "desk-security", path = "../components/security" }
runtime = { package = "desk-runtime", path = "../components/runtime" }
language = { package = "desk-language", path = "../components/language" }
protocol = { package = "desk-protocol", path = "../components/protocol" }

bevy_math = "0.5"