[package]
name = "desk-runtime-simple-traverse"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { package = "desk-runtime", path = "../../components/runtime" }
language = { package = "desk-language", path = "../../components/language" }