[package]
name = "desk-widget-backend-egui"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editor = { package = "desk-editor", path = "../../components/editor" }
language = { package = "desk-language", path = "../../components/language" }

egui = "0.12.0"
bevy_math = "0.5"