[package]
name = "desk-widget-backend-egui"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
physics = { package = "desk-physics", path = "../../components/physics", version = "0.1.0" }
language = { package = "desk-language", path = "../../components/language", version = "0.1.0" }

egui = "0.12.0"
bevy_math = "0.5.0"