[package]
name = "desk-client"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_audio",
  "bevy/bevy_wgpu",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/x11",
]

[dependencies]
core = { package = "desk-plugin-core", path = "../../plugins/core" }
physics-heron = { package = "desk-plugin-physics-heron", path = "../../plugins/physics-heron" }
egui = { package = "desk-plugin-egui", path = "../../plugins/egui" }
bevy = { version = "0.5", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render"] }
wasm-target = { package = "desk-plugin-wasm-target", path = "../../plugins/wasm-target" }

[dev-dependencies]
wasm-bindgen = "0.2.69"