[package]
name = "desk-client"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = [
  "bevy/bevy_audio",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/x11",
]

native = [
  "bevy/bevy_wgpu"
]

web = [
  "wasm-target"
]

[dependencies]
core = { package = "desk-plugin-core", path = "../../plugins/core", version = "0.1.0" }
shell = { package = "desk-plugin-shell", path = "../../plugins/shell", version = "0.1.0" }
physics-rapier = { package = "desk-plugin-physics-rapier", path = "../../plugins/physics-rapier", version = "0.1.0" }
egui = { package = "desk-plugin-egui", path = "../../plugins/egui", version = "0.1.0" }
bevy = { version = "0.5", default-features = false }
wasm-target = { package = "desk-plugin-wasm-target", path = "../../plugins/wasm-target", optional = true, version = "0.1.0" }
bevy_mod_debugdump = { git = "https://github.com/ryo33/bevy_mod_debugdump.git", optional = true }

[dev-dependencies]
wasm-bindgen = "0.2.69"