[package]
name = "desk-protocol"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4", "v5", "wasm-bindgen"] }
