[package]
name = "desk-shell"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node = { package = "desk-node", path = "../node", version = "0.1.0" }
security = { package = "desk-security", path = "../security", version = "0.1.0" }
runtime = { package = "desk-runtime", path = "../runtime", version = "0.1.0" }
language = { package = "desk-language", path = "../language", version = "0.1.0" }
protocol = { package = "desk-protocol", path = "../protocol", version = "0.1.0" }
physics = { package = "desk-physics", path = "../physics", version = "0.1.0" }

bevy_math = "0.5.0"