[package]
name = "desk-desk"
version = "0.1.0"
authors = ["Ryo Hashiguchi <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file = { package = "desk-file", path = "../file" }
room = { package = "desk-room", path = "../room" }
card = { package = "desk-card", path = "../card" }
source = { package = "desk-source", path = "../source" }