[package]
name = "desk-file"
version = "0.1.0"
authors = ["Ryo Hashiguchi <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card = { package = "desk-card", path = "../card" }
user = { package = "desk-user", path = "../user" }