[package]
name = "desk-source"
version = "0.1.0"
authors = ["Ryo Hashiguchi <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card = { package = "desk-card", path = "../card" }
value = { package = "desk-value", path = "../value" }
function = { package = "desk-function", path = "../function" }
credential = { package = "desk-credential", path = "../credential" }