[package]
name = "desk-user"
version = "0.1.0"
authors = ["Ryo Hashiguchi <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
credential = { package = "desk-credential", path = "../credential" }