[package]
name = "desk-plugin-core"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node = { package = "desk-node", path = "../../components/node" }
security = { package = "desk-security", path = "../../components/security" }
runtime = { package = "desk-runtime", path = "../../components/runtime" }
language = { package = "desk-language", path = "../../components/language" }
protocol = { package = "desk-protocol", path = "../../components/protocol" }
physics = { package = "desk-physics", path = "../../components/physics" }
shell = { package = "desk-shell", path = "../../components/shell" }
architect = { package = "desk-architect", path = "../../components/architect" }

simple_traverse_runtime = { package = "desk-runtime-simple-traverse", path = "../../adapters/runtime-simple-traverse" }

bevy = { version = "0.5", default-features = false }
