[package]
name = "desk-plugin-core"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node = { package = "desk-node", path = "../../components/node", version = "0.1.0" }
terminal = { package = "desk-terminal", path = "../../components/terminal", version = "0.1.0" }
security = { package = "desk-security", path = "../../components/security", version = "0.1.0" }
runtime = { package = "desk-runtime", path = "../../components/runtime", version = "0.1.0" }
language = { package = "desk-language", path = "../../components/language", version = "0.1.0" }
physics = { package = "desk-physics", path = "../../components/physics", version = "0.1.0" }
architect = { package = "desk-architect", path = "../../components/architect", version = "0.1.0" }

simple_traverse_runtime = { package = "desk-runtime-simple-traverse", path = "../../adapters/runtime-simple-traverse", version = "0.1.0" }

bevy = { version = "0.5", default-features = false }
