[package]
name = "desk-plugin-egui"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language = { package = "desk-language", path = "../../components/language" }
physics = { package = "desk-physics", path = "../../components/physics" }
shell = { package = "desk-shell", path = "../../components/shell" }
egui-backend = { path = "../../adapters/widget-backend-egui", package = "desk-widget-backend-egui" }

bevy = { version = "0.5", default-features = false }
bevy_egui = "0.5"
