[package]
name = "desk-plugin-physics-heron"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell = { package = "desk-shell", path = "../../components/shell" }
physics = { package = "desk-physics", path = "../../components/physics" }

bevy = { version = "0.5", default-features = false }
heron = { version = "0.9.0", features = ["2d"] }