[package]
name = "desk-plugin-wasm-target"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render"] }
bevy_webgl2 = { version = "0.5", default-features = false }
web-sys = "*"