[package]
name = "desk-client-websocket"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
eyre = "0.6.5"
protocol = { package = "desk-protocol", path = "../../components/protocol", version = "0.1.0" }
serde_cbor = "0.11.1"
tracing = "0.1.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7.3" }
