[package]
name = "dkernel-in-memory"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "The application platform for your cyberpunk desk"
homepage = "https://github.com/Hihaheho/Desk"
repository = "https://github.com/Hihaheho/Desk"
readme = "../../../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dkernel = { package = "dkernel", path = "../../systems/dkernel", version = "0.0.0" }
dkernel-components = { package = "dkernel-components", path = "../../components/dkernel-components", version = "0.0.0" }
