[package]
name = "desk-x"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "The application platform for your cyberpunk desk"
homepage = "https://github.com/Hihaheho/Desk"
repository = "https://github.com/Hihaheho/Desk"
readme = "../../../README.md"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui"]

[dependencies]
egui-plugin = { path = "../../plugins/desk-egui", version = "0.0.0", package = "desk-egui" }
rapier2d-plugin = { path = "../../plugins/desk-rapier2d", version = "0.0.0", package = "desk-rapier2d" }
touchpanel-plugin = { path = "../../plugins/desk-touchpanel", version = "0.0.0", package = "desk-touchpanel" }
editor-plugin = { path = "../../plugins/desk-editor", version = "0.0.0", package = "desk-editor" }
terminal-plugin = { path = "../../plugins/desk-terminal", version = "0.0.0", package = "desk-terminal" }

desk-window = { package = "desk-window", path = "../../components/desk-window", version = "0.0.0" }
desk-system-ordering = { package = "desk-system-ordering", path = "../../components/desk-system-ordering", version = "0.0.0" }
dworkspace = { package = "dworkspace", path = "../../systems/dworkspace", version = "0.0.0" }
dworkspace-in-memory = { package = "dworkspace-in-memory", path = "../../adapters/dworkspace-in-memory", version = "0.0.0" }
dworkspace-components = { package = "dworkspace-components", path = "../../components/dworkspace-components", version = "0.0.0" }
deskc-ids = { package = "deskc-ids", path = "../../components/deskc-ids", version = "0.0.0" }

bevy = "0.8"
bevy-inspector-egui = { version = "0.13.0", optional = true }
console_error_panic_hook = "0.1"
web-sys = "0.3"
egui = "0.19.0"
