[package]
name = "desk-x"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "The application platform for your cyberpunk desk"
homepage = "https://github.com/Hihaheho/Desk"
repository = "https://github.com/Hihaheho/Desk"
readme = "../../../README.md"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui"]

[dependencies]
egui-plugin = { path = "../../plugins/desk-egui", version = "0.0.0", package = "desk-egui" }
# wait for rapier2d supports bevy 0.9
# rapier2d-plugin = { path = "../../plugins/desk-rapier2d", version = "0.0.0", package = "desk-rapier2d" }
touchpanel-plugin = { path = "../../plugins/desk-touchpanel", version = "0.0.0", package = "desk-touchpanel" }
editor-plugin = { path = "../../plugins/desk-editor", version = "0.0.0", package = "desk-editor" }
terminal-plugin = { path = "../../plugins/desk-terminal", version = "0.0.0", package = "desk-terminal" }
playground-plugin = { path = "../../plugins/desk-playground", version = "0.0.0", package = "desk-playground" }

desk-theme = { workspace = true }
desk-window = { workspace = true }
desk-plugin = { workspace = true }
dworkspace = { workspace = true }
dworkspace-in-memory = { package = "dworkspace-in-memory", path = "../../adapters/dworkspace-in-memory", version = "0.0.0" }
dworkspace-codebase = { package = "dworkspace-codebase", path = "../../components/dworkspace-codebase", version = "0.0.0" }
deskc-ids = { package = "deskc-ids", path = "../../components/deskc-ids", version = "0.0.0" }

bevy = { workspace = true }
bevy-inspector-egui = { version = "0.18", optional = true }
console_error_panic_hook = "0.1"
web-sys = "0.3"
egui = { workspace = true }
once_cell = { workspace = true }
ron = { workspace = true }
